--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ a {
   background: #f7be73;
   color: #fff;
   outline: none;
+  cursor: pointer;
 }
 
 .results {
@@ -179,11 +180,113 @@ a {
   display: inline-block;
   background: #ef7325;
 }
+/* spinner start  */
+#spinner:not([hidden]) {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-/* media query */
+#spinner::after {
+  content: '';
+  width: 80px;
+  height: 80px;
+  border: 2px solid #f3f3f3;
+  border-top: 3px solid #f25a41;
+  border-radius: 100%;
+  will-change: transform;
+  animation: spin 1s infinite linear;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+/* spinner end */
+
+/* overlay start  */
+
+.overlay {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 20;
+  transition: 0.3s all;
+}
+
+.modal {
+  opacity: 0;
+  visibility: hidden;
+  width: 100%;
+  max-width: 500px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 30;
+  box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  padding: 30px;
+  border-radius: 3px;
+  background-color: #fff;
+  transition: 0.3s all;
+  overflow: auto;
+  height: 100%;
+  max-height: 450px;
+}
+
+.modal.active,
+.overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal__cross {
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  fill: #444;
+  cursor: pointer;
+}
+
+/* a {
+  padding: 20px;
+  display: inline-block;
+  text-decoration: none;
+  background-color: #414b52;
+  margin: 10px;
+  color: #fff;
+  border-radius: 3px;
+} */
+
+p {
+  color: #000;
+}
+
+/* overlay end */
 
 /* media query */
 @media only screen and (max-width: 600px) {
+  form input,
+  form button {
+    font-size: 1.5em;
+  }
   .section {
     padding: 3em 0;
   }
@@ -195,11 +298,19 @@ a {
   .results li {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
     padding: 0.75em 1em;
+    align-items: center;
   }
 
   .results li p {
     white-space: normal;
   }
+
+  .results .btn {
+    font-size: 0.8em;
+  }
+  .modal {
+    max-height: 100%;
+  }
 }
+/* media query */
